--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django>=4.2
+﻿Django>=4.2
 psycopg[binary]
 dj-database-url
 gunicorn
@@ -7,3 +7,15 @@ django-allauth
 django-admin-interface
 python-dotenv
 Pillow
+Django>=4.2
+gunicorn
+whitenoise
+psycopg[binary]
+dj-database-url
+django-allauth
+django-admin-interface
+python-dotenv
+Pillow
+cloudinary
+django-cloudinary-storage
+requests   # ✅ add this line
